# matrixai

./: .gitignore  README.md  build.sh  gallery.json  images_data.json  matrixai.service  pyproject.toml  requirements.txt  run.sh  run.sh.example
.gitea/workflows/: lint.yml
matrixai/: __init__.py
public/: index.html
