[tool.poetry]
name = "matrixai"
version = "0.1.0"
description = ""
authors = ["0xMRTT <0xMRTT@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simplematrixbotlib = "^2.8.0"
baichat-py = "^0.3.0"
aiohttp = "^3.8.5"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
